outputs/tsp_constructive-constructive/2025-09-19_00-14-35/evaluations/problem_eval-7099751950777950553_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on their centrality in the remaining graph, while also applying a penalty for nodes that create long detours to the destination.}
                                                                                                                                                     ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on their centrality in the remaining graph, while also applying a penalty for nodes that create long detours to the destination.}
                                                                                                                                                     ^
SyntaxError: unmatched '}'
